# AI-orchestra-2

./: .env.example  .gitignore  PLAN.md  README.md  TODO.md  main.py  pyproject.toml
config/: logging_config.json  rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_debate_engine.md  PRD_judge_scoring.md  PRD_llm_integration.md  TODO.md  prompts.md
src/: main.py
src/ai_orchestra/: __init__.py  constants.py
src/ai_orchestra/sdk/: __init__.py  sdk.py
src/ai_orchestra/services/: __init__.py  debate_engine.py  debate_factory.py  llm_client.py  llm_errors.py  opener_policy.py  reporter.py  transcript.py
src/ai_orchestra/services/agents/: __init__.py  base.py  con_agent.py  judge_agent.py  pro_agent.py  (+1 more)
src/ai_orchestra/shared/: __init__.py  config.py  config_errors.py  config_helpers.py  config_loader.py  config_models.py  gatekeeper.py  gatekeeper_models.py  gatekeeper_utils.py  version.py
src/ai_orchestra_2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/fixtures/: rate_limits.test.json  setup.test.json
tests/helpers/: recording_llm.py  stub_agents.py
tests/integration/: test_cli.py  test_debate_flow.py  test_sdk_integration.py
tests/unit/: test_agents_imports.py  test_con_agent.py  test_config.py  test_constants.py  test_debate_engine.py  test_gatekeeper.py  test_gatekeeper_llm.py  test_imports.py  test_judge_agent.py  test_judge_parser.py  test_line_limits.py  test_llm_client.py  test_models.py  test_opener_policy.py  test_pro_agent.py  test_reporter.py  test_sdk.py  test_transcript.py  test_version.py
(+9 files in other folders)
